# mac-setup

./: .editorconfig  Cargo.toml  build.rs
.agents/skills/quality-insurance/: SKILL.md
.agents/skills/refactor/: SKILL.md
.github/: copilot-instructions.md
config/: .wezterm.lua  code.settings.json  helix.config.toml  stefc.zsh-theme  yazi.theme.toml
config/helix-theme/: warm-burnout-dark.toml  warm-burnout-light.toml
config/wezterm-theme/: warm-burnout-dark.toml  warm-burnout-light.toml
prompts/: qa_refactoring.md  store_and_refine_prompt.md
src/: common.rs  environment.rs  logging.rs  main.rs  platform.rs
src/common/: error.rs  logging.rs  mod.rs  platform.rs  utils.rs
src/configurators/: mod.rs  vscode.rs  wezterm.rs  yazi.rs  zshrc.rs
src/detectors/: app_detector.rs  helix.rs  mac_app.rs  mod.rs  oh_my_zsh.rs  rustrover.rs  vscode.rs  wezterm.rs  which.rs  yazi.rs
src/settings/: linux.rs  macos.rs  mod.rs  platform.rs  windows.rs
src/symlinks/: creator.rs  mod.rs  setup.rs
