[package]
name = "mac-setup"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
regex = "1"
thiserror = "2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
#![no_std]
